@@ -2,8 +2,8 @@
     tal:define="form_status view/form_status;"
     tal:condition="form_status"
     tal:content="structure string:
-    jq(function() {
-        _gaq.push(['_trackPageview', '${view/relative_url}/${form_status}']);
-    });
+    /*&lt;![CDATA[*/
+    _gaq.push(['_trackPageview', '${view/relative_url}/${form_status}']);
+    /*]]&gt;*/
 ">
 </script>
